--- a/css/base.css
+++ b/css/base.css
@@ -606,7 +606,7 @@ main{
 
 @media (max-width: 600px) {
     .topbar {
-        padding: calc(12px + var(--safe-top)) 14px 12px 14px
+        padding: calc(12px + var(--safe-top)) calc(14px + var(--safe-right)) 12px calc(14px + var(--safe-left))
     }
 
     .brand {
@@ -913,7 +913,7 @@ html.showA2HS .a2hs {
       "s1 s3";
     align-items:center;
     gap:8px;
-    padding: calc(8px + var(--safe-top)) 10px 8px 10px;
+    padding: calc(8px + var(--safe-top)) calc(10px + var(--safe-right)) 8px calc(10px + var(--safe-left));
   }
 
   .topbar-layout-4 .topbar-section-1{ grid-area:s1; }
