--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,9 @@ html:has(.login-body) {
     display: grid;
     place-items: center;
     padding-top: env(safe-area-inset-top, 0px);
-    padding-bottom: env(safe-area-inset-bottom, 0px)
+    padding-right: env(safe-area-inset-right, 0px);
+    padding-bottom: env(safe-area-inset-bottom, 0px);
+    padding-left: env(safe-area-inset-left, 0px)
 }
 
 .login-shell {
